--- a/Delta/day8/index.html
+++ b/Delta/day8/index.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        
+    <h1>All Topics of this chapter</h1>
+    <ol id = "MyList">
+        <li><a href="Transition.html" >Transition</a></li>
+        <li><a href="Transform.html" >Transform</a></li>
+        <li><a href="BackgroundImage.html">Background Image</a></li>
+        <li><a href="project.html">project</a></li>
+    </ol>
+    </li>
+    <div id="intro">
+        Made By <a href="https://www.linkedin.com/in/pknatic/">Pknatic</a>
     </div>
 </body>
 </html>
