--- a/Delta/day8/index.html
+++ b/Delta/day8/index.html
@@ -12,7 +12,10 @@
         <li><a href="Transition.html" >Transition</a></li>
         <li><a href="Transform.html" >Transform</a></li>
         <li><a href="BackgroundImage.html">Background Image</a></li>
+        <li><a href="position.html">Position</a></li>
         <li><a href="project.html">project</a></li>
+        <li><a href="project2.html">project 2</a></li>
+        <li><a href="Assignment.html">Assignment</a></li>
     </ol>
     </li>
     <div id="intro">
