--- a/projects/testing/index.html
+++ b/projects/testing/index.html
@@ -1,55 +1,54 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
   <body>
-    <form id="form">
-      <div class="field">
-        <label for="from_name">from_name</label>
-        <input type="text" name="from_name" id="from_name" />
+    
+    <p>Please checkout out most effective payment models</p>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+        </div>
       </div>
-      <div class="field">
-        <label for="email_id">email_id</label>
-        <input type="text" name="email_id" id="email_id" />
-      </div>
-      <div class="field">
-        <label for="message">message</label>
-        <input type="text" name="message" id="message" />
-      </div>
-
-      <input type="submit" id="button" value="Send Email" />
-    </form>
-
+    </div>
     <script
-      type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
     ></script>
-
-    <script type="text/javascript">
-      emailjs.init("TfJXHqbXpRj-N4iM_");
-    </script>
-
-    <script>
-      const btn = document.getElementById("button");
-
-      document
-        .getElementById("form")
-        .addEventListener("submit", function (event) {
-          event.preventDefault();
-
-          btn.value = "Sending...";
-
-          const serviceID = "default_service";
-          const templateID = "template_c8wnbsg";
-
-          emailjs.sendForm(serviceID, templateID, this).then(
-            () => {
-              btn.value = "Send Email";
-              alert("Sent!");
-            },
-            (err) => {
-              btn.value = "Send Email";
-              alert(JSON.stringify(err));
-            }
-          );
-        });
-    </script>
   </body>
 </html>
